test/compile_error/invalidrange.conf.2.def
config invalid_range_conf {
    foo : int[100~-10];
}
